# goedel-prover

./: .gitignore  README.md  pyproject.toml  requirements_cuda.txt
src/goedel_prover/eval/: eval.sh  step1_inference.py  step2_compile.py  step3_summarize_compile.py
src/goedel_prover/prover/: utils.py
src/goedel_prover/prover/lean/: ast_parser.py  verifier.py
src/goedel_prover/prover/workers/: data_loader.py  generator.py  scheduler.py  search.py
