[project]
authors = [
  { name = "Sergio Hernandez", email = "contact.sergiohernandez@gmail.com" },
]
name = "goedel-prover"
requires-python = "== 3.10"
version = "0.1.0"
dependencies = ["pytz==2022.1", "termcolor==2.4.0", "easydict==1.13", "tabulate==0.9.0", "transformers==4.46.1", "torch==2.4.0", "torchvision==0.19.0", "numpy==1.26.4", "pandas==1.4.3", "accelerate==0.33.0", "vllm==0.6.3.post1", "vllm-nccl-cu12==2.18.1.0.4.0"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
goedel_prover = { path = ".", editable = true }

[tool.pixi.tasks]
